--- a/Toyota/Toyota/Views/Register/Index.cshtml
+++ b/Toyota/Toyota/Views/Register/Index.cshtml
@@ -8,7 +8,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
     body {
-        background: #1c1c1c; /* Koyu arka plan rengi */
+        background: #1c1c1c;
         color: #fff;
     }
 
@@ -17,7 +17,7 @@
     }
 
     .card-body {
-        background-color: #333; /* Koyu arka plan için */
+        background-color: #333;
         border-radius: 8px;
         padding: 2rem;
     }
@@ -97,8 +97,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script>
-    $('#btn1').click(function () {
-        swal("Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spama girmeden gönderilmeye devam edicektir!");
-    });
-</script>
